--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #ededed;   
+    /* #FCF6F5FF */
   }
 }
 
@@ -23,4 +24,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: hidden;
 }
